--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -9,7 +9,7 @@ Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 | Asynchroner Download
 | Der Export läuft im Hintergrund. Wenn der Download abgeschlossen ist, lädst du die Exportdatei über die Notifications (material:notifications[]) herunter.
 
-| Live-Export
+| Live-Download
 | Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
 *_Aber:_* Das plentymarkets Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
 
@@ -44,24 +44,24 @@ image::daten:katalog-export.gif[]
 
 --
  
-Live-Export starten::
+Live-Download starten::
 +
 --
 
-//tag::live-export[]
-Beim Live-Export wird die Datei erstellt und auch gleich automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit im Tab *Datenexport* verfolgen. Aber:
+//tag::live-download[]
+Beim Live-Download wird die Datei erstellt und auch gleich automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Downloads in Echtzeit im Tab *Datenexport* verfolgen. Aber:
 
 * Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten.
-* Du kannst Live-Exporte mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Export für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
+* Du kannst Live-Download mehrerer Kataloge gleichzeitig durchführen. Einen neuen Live-Download für denselben Katalog kannst du aber erst starten, wenn der laufende Export abgeschlossen ist.
 
 [.instruction]
-Live-Export starten:
+Live-Download starten:
 
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . Öffne den Katalog.
-. Klicke in der Symbolleiste oben auf *Live-Export* (material:play_circle_outline[]). +
-*_Oder:_* Noch schneller geht es, wenn du den Live-Export über die *Weiteren Aktionen* (material:more_vert[]) in der Katalogübersicht startest. +
+. Klicke in der Symbolleiste oben auf *Live-Download* (material:play_circle_outline[]). +
+*_Oder:_* Noch schneller geht es, wenn du den Live-Download über die *Weiteren Aktionen* (material:more_vert[]) in der Katalogübersicht startest. +
 → Das Tab *Datenexport* wird geöffnet. +
 → Der Export wird gestartet. +
 *_Wichtig:_* Das Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export angehalten. +
@@ -69,15 +69,15 @@ Live-Export starten:
 → Wenn der Export abgeschlossen ist, wirst die Datei automatisch auf deinem Rechner gespeichert.
 
 [TIP]
-.Live-Export stoppen
+.Live-Download stoppen
 ======
 
-Du willst den Live-Export anhalten? Kein Problem:
+Du willst den Live-Download anhalten? Kein Problem:
 
 * Klicke im Tab *Datenexport* in der blauen Leiste ganz rechts auf *Export abbrechen* (material:highlight_off[]). +
-→ Der Export wird angehalten. +
-*_Wichtig:_* Der Export kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Export.
+→ Der Download wird angehalten. +
+*_Wichtig:_* Der Download kann nicht fortgesetzt werden. Starte bei Bedarf einen neuen Download.
 ======
-//end::live-export[]
+//end::live-download[]
 --
 ====
