--- a/docs/de-de/modules/daten/partials/catalogue-menu.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-menu.adoc
@@ -120,7 +120,7 @@ ifdef::marketplace-export[]
 *_Wichtig:_* Mit dieser Option startest du einen manuellen Export. Die Daten werden damit _nicht_ zum Marktplatz exportiert.
 endif::marketplace-export[]
 
-| material:play_circle_outline[] *Live-Export*
+| material:play_circle_outline[] *Live-Download*
 | Lädt die Katalogdaten als Datei herunter.
 Der Download wird sofort gestartet.
 Die Datei wird automatisch auf deinem Rechner gespeichert, wenn der Export abgeschlossen ist.
