--- a/docs/en-gb/modules/data/pages/catalogues-status.adoc
+++ b/docs/en-gb/modules/data/pages/catalogues-status.adoc
@@ -28,7 +28,7 @@ You are in the menu *Data » Catalogue export status*. When you open the menu, a
 * *Preview* = The export creates a preview of the first five records of the catalogue.
 * *Direct* = The export is processed immediately.
 * *Async* = The export is split into jobs. These jobs are enqueued.
-* *Live* = The export was started as a *live export*. The file is downloaded to your computer automatically.
+* *Live* = The export was started as a *live download*. The file is downloaded to your computer automatically.
 * *Dev cache* = A cached version of the catalogue is exported. The cache is updated every 20 minutes. +
 *_Tip:_* Exports of the type *Dev cache* are not shown in the overview list automatically. However, you can filter by this type to show these exports.
 //end::export-types[]
