--- a/docs/en-gb/modules/data/partials/catalogue-overview.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-overview.adoc
@@ -174,13 +174,13 @@ image::data:catalogue-overview-list.png[]
 include::partial$catalogue-manual-download.adoc[tag=async-export]
 --
 
-! material:play_circle_outline[] *Live export*
+! material:play_circle_outline[] *Live download*
 ! Download the catalogue data as a file. This file is automatically saved on your computer when the export is done.
 
 [.collapseBox]
-.How does a live export work?
+.How does a live download work?
 --
-include::partial$catalogue-manual-download.adoc[tag=live-export]
+include::partial$catalogue-manual-download.adoc[tag=live-download]
 --
 
 ! material:preview[] *Preview*
