--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -9,7 +9,7 @@ There are two ways to manually export the catalogue data:
 | Asynchronous download
 | The export runs in the background. Once the export is completed, you download the export file from the Notifications (material:notifications[]).
 
-| Live export
+| Live download
 | The file is downloaded to your computer automatically. You can follow the export progress in real time. +
 *_However:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do so, the export will be cancelled.
 
@@ -44,24 +44,24 @@ image::data:catalogue-export.gif[]
 
 --
  
-Starting a live export::
+Starting a live download::
 +
 --
 
-//tag::live-export[]
-The live export creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the export progress in real time. However:
+//tag::live-download[]
+The live download creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the export progress in real time. However:
 
 * Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
-* You can start live exports for several catalogues at the same time. However, you can only start a new live export for the same catalogue once the current export is complete.
+* You can start live downloads for several catalogues at the same time. However, you can only start a new live download for the same catalogue once the current export is complete.
 
 [.instruction]
-Starting a live export:
+Starting a live download:
 
 . Go to *Data » Catalogues*. +
 → The catalogue overview opens.
 . Open the catalogue.
-. In the toolbar at the top, click on *Live export* (material:play_circle_outline[]). +
-*_Or:_* Even quicker: Start the live export from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
+. In the toolbar at the top, click on *Live download* (material:play_circle_outline[]). +
+*_Or:_* Even quicker: Start the live download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
 → The tab *Data export* opens. +
 → The export starts. +
 *_Important:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
@@ -69,15 +69,15 @@ Starting a live export:
 → The file is automatically saved on your computer when the export is done.
 
 [TIP]
-.Stopping a live export
+.Stopping a live download
 ======
 
-Do you want to stop a live export? No problem:
+Do you want to stop a live download? No problem:
 
 * In the tab *Data export* click on *Cancel export* (material:highlight_off[]) at the very right of the blue bar. +
 → The export is stopped. +
 *_Important:_* The export cannot be restarted. If necessary, start a new export.
 ======
-//end::live-export[]
+//end::live-download[]
 --
 ====
