Kathrin/live export (#1145)
* Update catalogue-overview.adoc

* Update catalogues-manage.adoc

* push

* push

* push

* Update catalogue-menu.adoc

* push

* push

* Update catalogues-status.adoc

* Update catalogues-manage.adoc

* Update catalogue-menu.adoc

* Update catalogue-overview.adoc

* Update export-standard-formats.adoc

* Update export-marketplace-formats.adoc

* push

* push

* push

* push

* push

--- a/docs/de-de/modules/daten/pages/catalogues-status.adoc
+++ b/docs/de-de/modules/daten/pages/catalogues-status.adoc
@@ -28,6 +28,7 @@ Du befindest dich im Menü *Daten » Katalogexportstatus*. Wenn du das Menü öf
 * *Vorschau* = Der Export erstellt eine Vorschau der ersten fünf Datensätze des Katalogs.
 * *Direkt* = Der Export wird sofort verarbeitet.
 * *Async* = Der Export wird in Jobs zerlegt. Diese Jobs werden in die Warteschlange eingereiht.
+* *Live* = Der Export wurde als *Live-Download* gestartet. Die Datei wird direkt auf deinen Rechner heruntergeladen.
 * *Dev-Cache* = Eine gecachte Version des Katalogs wird exportiert. Der Cache wird alle 20 Minuten aktualisiert. +
 *_Tipp:_* Exportvorgänge des Typs *Dev-Cache* werden nicht automatisch in der Übersichtsliste angezeigt. Du kannst aber nach diesem Typ filtern, um die Exporte anzuzeigen.
 //end::export-types[]
