--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 Die Katalogübersicht ist das Erste was du siehst, wenn du das Menü *Daten » Kataloge* öffnest.
 
 image::daten:catalogue-overview-in-colours.png[]
@@ -135,20 +137,16 @@ Hier sind alle Kataloge aufgelistet.
 
 image::daten:catalogue-overview-list.png[]
 
-[cols="1,3a"]
+[cols="1,4a"]
 |===
 | material:check_box_outline_blank[]
 | Wähle einen oder mehrere Kataloge. So kannst du die Aktionen in der Symbolleiste auf mehrere Kataloge gleichzeitig anwenden.
 
 | *Aktiv*
 | Ist der Katalog aktiv? Über den Toggle kannst du den Katalog aktivieren oder deaktivieren. +
-Du kannst hier auch den Katalog aktivieren oder deaktivieren. +
 
-material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert. +
 * material:toggle_off[] = Der Katalog ist nicht aktiv. Es werden also keine Daten exportiert.
-material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
 * material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. Wie oft und wohin hängt von deinen Exporteinstellungen ab.
-// TODO: Link einfügen
 
 | *Name*
 | Der Name des Katalogs
@@ -167,8 +165,23 @@ material:toggle_on[] = Der Katalog ist aktiv. Es werden also Daten exportiert. W
 
 [cols="1a,5a"]
 !===
-! material:file_download[] *Daten herunterladen*
-! Exportiere die Daten manuell in eine Datei.
+! material:file_download[] *Asynchroner Download*
+! Starte den manuellen Download der Katalogdaten in eine Datei.
+
+[.collapseBox]
+.Wie geht ein Asynchroner Download?
+--
+include::partial$catalogue-manual-download.adoc[tag=async-export]
+--
+
+! material:play_circle_outline[] *Live-Download*
+! Lade die Katalogdaten als Datei herunter. Diese Datei wird automatisch auf deinem Rechner gespeichert, wenn der Export abgeschlossen ist.
+
+[.collapseBox]
+.Wie geht ein Live-Download?
+--
+include::partial$catalogue-manual-download.adoc[tag=live-download]
+--
 
 ! material:preview[] *Vorschau*
 ! Erstelle eine Vorschau des Exports. Die Vorschau enthält die ersten fünf Datenzeilen des Exports.
