--- a/docs/de-de/modules/daten/partials/catalogues-manage.adoc
+++ b/docs/de-de/modules/daten/partials/catalogues-manage.adoc
@@ -1,3 +1,5 @@
+:author: team-plenty-channel
+
 Lerne, wie du vorhandene Kataloge verwaltest. Diese Informationen gelten für Marktplatz-Formate und für Standardformate.
 
 [#catalogue-rights]
@@ -81,10 +83,10 @@ Du kannst einen Katalog oder mehrere Kataloge gleichzeitig löschen.
 Einen Katalog löschen::
 +
 --
-//tag::delete-catalogue[]
 [.instruction]
 Einen Katalog löschen:
 
+//tag::delete-catalogue[]
 . Öffne das Menü *Daten » Kataloge*. +
 → Die Katalog-Übersicht wird geöffnet.
 . Klicke in der Zeile des Katalogs, den du löschen möchtest, auf die weiteren Aktionen (material:more_vert[]).
