--- a/docs/en-gb/modules/automation/pages/procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/procedures.adoc
@@ -1975,7 +1975,7 @@ The following sub-procedures are available for this procedure:
 [#390]
 ==== Return slip
 
-Use the **Return slip** procedure along with a sub-procedure to print or save a return slip automatically. This return slip is attached to the item in case customers might need it for a xref:ordersgenerating-return-slips.adoc#[return].
+Use the **Return slip** procedure along with a sub-procedure to print or save a return slip automatically. This return slip is attached to the item in case customers might need it for a xref:orders:generating-return-slips.adoc#[return].
 
 [.subhead]
 Work steps
