--- a/docs/en-gb/modules/data/pages/export-standard-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-standard-formats.adoc
@@ -789,51 +789,13 @@ Activating automatic catalogue export:
 → The data is exported to the storage location and at the intervals you selected in the catalogue settings.
 
 [#manual-export]
-=== Starting a manual export in the catalogue
+=== Starting a manual export
 
-Have you added at least one data field to the export? You can then start a manual export of the export. Once the export is completed, you can download the export file from the Notifications.
+Have you added at least one data field to the export? Then start a manual export of the export.
+The format in which the data is exported depends on the format settings of the catalogue.
+You can export data in CSV, TXT, JSON and XML files.
 
-The format in which the data is exported depends on the format settings of the catalogue. You can export data in CSV, TXT, JSON and XML files.
-
-NOTE: The export process is started when you click on *Download data*. However, note that there will be _no_ window for downloading the file straight away. When the export is completed, you can download the export file from the Notifications.
-
-[tabs]
-====
-Starting manual catalogue export::
-+
---
-
-. Go to *Data » Catalogues*. +
-→ The catalogue overview opens.
-. Open the catalogue.
-. In the toolbar at the top, click on *Download data* (material:file_download[]). +
-→ The export starts. +
-*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
-. In the notification centre, click on material:link[] *Download*. +
-*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
-. Save the file on your computer.
-
---
- 
-Start manual export from catalogue list::
-+
---
-
-. Go to *Data » Catalogues*. +
-→ The catalogue overview opens.
-. In the row of the catalogue, click on the further actions (material:more_vert[]).
-. Click on *Download data* (material:file_download[]). +
-→ The export starts. +
-*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
-. In the notification centre, click on material:link[] *Download*. +
-*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
-. Save the file on your computer.
---
-====
-
-image::data:catalogue-export.gif[]
+include::partial$catalogue-manual-download.adoc[]
 
 [#faq]
 == FAQ: Questions and answers
