Update order import

--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -631,7 +631,7 @@ Im Folgenden erfährst du, wie Aufträge bei OTTO Market verarbeitet werden.
 === Auftragsimport
 
 * OTTO Market-Aufträge werden als unbezahlt in Status *[3] Warten auf Zahlung* in plentymarkets importiert.
-* Aufträge mit dem OTTO Market-Status ANNOUNCED werden ohne Adressdaten in Status *[1] Unvollständige Daten* in plentymarkets importiert. Hierbei handelt es sich um Aufträge mit der Zahlungsmethode Vorkasse, die noch nicht bezahlt wurden. Sobald der Auftrag bei OTTO in den Status PROCESSABLE wechselt, werden die Adressen am Auftrag ergänzt und der Auftrag wird in Status *[3] Warten auf Zahlung* verschoben. +
+* Aufträge mit dem OTTO Market-Status ANNOUNCED werden ohne Adressdaten in Status *[1] Unvollständige Daten* in plentymarkets importiert. Hierbei handelt es sich um Aufträge, die nach der Bestellung noch von der Käufer:in storniert werden können, oder Aufträge mit der Zahlungsmethode Vorkasse, die noch nicht bezahlt wurden. Sobald der Auftrag bei OTTO in den Status PROCESSABLE wechselt, werden die Adressen am Auftrag ergänzt und der Auftrag wird in Status *[4] In Versandvorbereitung* verschoben. Aufträge mit der Zahlungsmethode Vorkasse werden in Status *[3] Warten auf Zahlung* verschoben. +
 *_Wichtig:_* Standardmäßig wird für Aufträge im Status *[1] Unvollständige Daten* kein Warenbestand reserviert. Damit für diese Aufträge Warenbestand reserviert wird, öffne das Menü *Einrichtung » Aufträge » Einstellungen*. Wähle bei der Einstellung *Status Auftragsreservierung (Reservierung von Beständen)* für die Option *von* den Status *[1] Unvollständige Daten*. Wähle in der letzten Dropdown-Liste die Option *Alle Aufträge*.
 * Nachdem ein Auftrag von OTTO Market bestätigt wurde, wechselt der Auftrag in den Status *[5] Freigabe Versand*.
 * In plentymarkets wird eine Zahlung für den Auftrag erstellt und der Auftrag als *bezahlt* gekennzeichnet. +
