--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -1,13 +1,13 @@
 :author: team-plenty-channel
 
-Have you added at least one data field to the export? Then download the catalogue data manually. The format in which the data is exported depends on the format settings of the catalogue. You can export data in CSV, TXT, JSON and XML files.
+Have you added at least one data field to the export? Then download the catalogue data manually. The format of the download file depends on the xref:data:export-standard-formats.adoc#format-settings[format settings of the catalogue]. You can export data in CSV, TXT, JSON and XML files.
 
 There are two ways to manually export the catalogue data:
 
 [cols="1,3a"]
 |===
 | Asynchronous download
-| The export runs in the background. Once the export is completed, you download the export file from the Notifications (material:notifications[]).
+| The export runs in the background. Once the download is completed, you download the export file from the Notifications (material:notifications[]).
 
 | Live download
 | The file is downloaded to your computer automatically. You can follow the export progress in real time. +
@@ -49,7 +49,7 @@ Starting a live download::
 --
 
 //tag::live-download[]
-The live download creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the export progress in real time. However:
+The live download creates the file and automatically downloads it to your computer. In the tab *Data export*, you can follow the download progress in real time. However:
 
 * Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled.
 * You can start live downloads for several catalogues at the same time. However, you can only start a new live download for the same catalogue once the current export is complete.
@@ -61,7 +61,7 @@ Starting a live download:
 → The catalogue overview opens.
 . Open the catalogue.
 . In the toolbar at the top, click on *Live download* (material:play_circle_outline[]). +
-*_Or:_* Even quicker: Start the live download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
+*_Or:_* Even quicker: Start the download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
 → The tab *Data export* opens. +
 → The export starts. +
 *_Important:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do, the export stops and is cancelled. +
@@ -75,8 +75,8 @@ Starting a live download:
 Do you want to stop a live download? No problem:
 
 * In the tab *Data export* click on *Cancel export* (material:highlight_off[]) at the very right of the blue bar. +
-→ The export is stopped. +
-*_Important:_* The export cannot be restarted. If necessary, start a new export.
+→ The download is stopped. +
+*_Important:_* The download cannot be restarted. If necessary, start a new download.
 ======
 //end::live-download[]
 --
