--- a/docs/en-gb/modules/markets/pages/otto-market.adoc
+++ b/docs/en-gb/modules/markets/pages/otto-market.adoc
@@ -640,7 +640,7 @@ This chapter describes how OTTO Market orders are processed.
 === Order import
 
 * OTTO Market orders are imported into plentymarkets with status *[3] Waiting for payment*.
-* Orders with the OTTO Market status ANNOUNCED are imported to plentymarkets without address details and with the status *[1] Incomplete data*. These are orders that can still be cancelled by the customer, or orders with the payment method cash in advance that have not been paid. As soon as the order changes to the status PROCESSABLE at OTTO Market, the address is added to the order and the order is moved to status *[4] In preparaton for shipping*. Orders with the payment method cash in advance are moved to status *[3] Waiting for payment*. +
+* Orders with the OTTO Market status ANNOUNCED are imported to plentymarkets without address details and with the status *[1] Incomplete data*. These are orders that can still be cancelled by the customer, or orders with the payment method cash in advance that have not been paid. As soon as the order changes to the status PROCESSABLE at OTTO Market, the address is added to the order and the order is moved to status *[4] In preparation for shipping*. Orders with the payment method cash in advance are moved to status *[3] Waiting for payment*. +
 *_Important:_* No stock is reserved for orders in status *[1] Invalid data* by default. To make sure that stock is reserved for these orders, go to *Setup » Orders » Settings*. Go to the setting *Status for order reservation (Reservation of stocks)*. For the option *to*, select the status *[1] Incomplete data*. In the drop-down list to the far right, select the option *All orders*.
 * After an order was confirmed by OTTO Market, the order changes to status *[5] Shipment process started*.
 * A payment is created for the order in plentymarkets and the order is marked as *paid*. +
