--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -402,7 +402,7 @@ Dokumente suchen:
 [#dokumente-herunterladen]
 ==== Dokument herunterladen
 
-Du kannst bereits hochgeladene Dokumente jederzeit herunterladen. Klicke dazu in der Zeile des Dokuments auf material:more_vert[] und dann auf material:file_download[] *Herunterladen*. Ein Fenster öffnet sich und du kannst das Dokument an dem gewünschten Speicherort auf deinem Computer speichern.
+Du kannst bereits hochgeladene Dokumente jederzeit herunterladen. Klicke dazu in der Zeile des Dokuments auf material:more_vert[] und dann auf material:file_download[] *Herunterladen*. Ein Fenster wird geöffnet und du kannst das Dokument an dem gewünschten Speicherort auf deinem Computer speichern.
 
 [#dokumente-oeffnen]
 ==== Dokument öffnen
@@ -457,7 +457,7 @@ Passwort manuell ändern:
 . Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
 . Klicke auf der linken Seite auf *plentyShop-Login*.
 . Klicke auf material:edit[] *Passwort ändern*. +
-→ Das Fenster *Neues Passwort* öffnet sich.
+→ Das Fenster *Neues Passwort* wird geöffnet.
 . Gib das neue Passwort ein.
 . Wiederhole das neue Passwort.
 . Klicke auf *Speichern*.
@@ -531,7 +531,7 @@ Du kannst den Link zum Mein Konto-Bereich des Kontakts in deinem plentyShop mit 
 [#auftraege]
 === Aufträge
 
-Hier siehst du alle Aufträge des Kontakts. Wenn du den Kontaktdatensatz öffnest, ist dieser Bereich standardmäßig geöffnet und die vorhandenen Daten werden geladen. Mit einem Klick in die Zeile des Auftrags öffnet sich der Auftrag im Menü *Aufträge » Aufträge bearbeiten*.
+Hier siehst du alle Aufträge des Kontakts. Wenn du den Kontaktdatensatz öffnest, ist dieser Bereich standardmäßig geöffnet und die vorhandenen Daten werden geladen. Mit einem Klick in die Zeile des Auftrags wird der Auftrag im Menü *Aufträge » Aufträge bearbeiten* geöffnet.
 
 Mit einem Klick auf *Optionen* (material:add[]) oben rechts erstellst du einen neuen Auftrag, ein neues Angebot, ein neues Abonnement oder einen neuen Sammelauftrag. Weitere Informationen zu diesem Kontextmenü findest du auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen] im Kapitel xref:crm:kontakt-suchen.adoc#kontextmenue-uebersicht[Kontextmenü in der Übersicht].
 
@@ -724,7 +724,7 @@ Wähle eine Option aus der Dropdown-Liste.
 [discrete]
 ==== Adresse löschen
 
-Mit einem Klick in die Zeile der Adresse öffnet sich der Adressdatensatz. Du kannst sie mit einem Klick auf *Löschen* (material:delete[]) nach dem Bestätigen der Sicherheitsabfrage löschen.
+Mit einem Klick in die Zeile der Adresse wird der Adressdatensatz geöffnet. Du kannst sie mit einem Klick auf *Löschen* (material:delete[]) nach dem Bestätigen der Sicherheitsabfrage löschen.
 
 [NOTE]
 .Löschen von Adressen, die mit Aufträgen verknüpft sind, ist nicht möglich
@@ -862,7 +862,7 @@ Klicke in der Zeile der Firma auf material:more_vert[] und dann auf material:del
 [#neue-firma-verknuepfen]
 ===== Neue Firma verknüpfen
 
-Mit einem Klick auf *Neue Firma hinzufügen* (material:add[]) öffnet sich ein neues Fenster, in dem du eine Firma hinzufügen kannst. Nachdem du alle Felder in dem xref:crm:firmen.adoc#firma-erstellen[neuen Firmendatensatz] ausgefüllt hast und die Einstellungen gespeichert hast, wird der Kontakt der Firma automatisch zugeordnet. +
+Mit einem Klick auf *Neue Firma hinzufügen* (material:add[]) wird ein neues Fenster geöffnet, in dem du eine Firma hinzufügen kannst. Nachdem du alle Felder in dem xref:crm:firmen.adoc#firma-erstellen[neuen Firmendatensatz] ausgefüllt hast und die Einstellungen gespeichert hast, wird der Kontakt der Firma automatisch zugeordnet. +
 *_Wichtig:_* Die Verknüpfung zu der vorherigen Firma wird entfernt.
 
 Nachdem du die Daten im <<#kontaktdatensatz-neu-laden, Kontaktdatensatz neu geladen>> hast, ist die neue Firma auch in der Übersicht sichtbar. +
@@ -945,7 +945,7 @@ Diese Tabelle ist individuell anpassbar. Das bedeutet, dass du selbst entscheide
 Spalten konfigurieren:
 
 . Klicke im Bereich *Konto* auf *Spalten konfigurieren* (material:settings[]). +
-→ Das Fenster *Spalten konfigurieren* öffnet sich.
+→ Das Fenster *Spalten konfigurieren* wird geöffnet.
 . Wähle, welche Spalten angezeigt werden sollen. Beachte <<#table-account-balance-contact>>.
 . Verschiebe (material:drag_indicator[]) die Spalten so, dass sie in der Reihenfolge angezeigt werden, in der du sie benötigst.
 . Klicke auf *Bestätigen*, um deine Auswahl zu speichern.
@@ -1044,7 +1044,7 @@ Dir stehen verschiedene Filter zur Verfügung, um spezifische Informationen zum 
 
 Im Bereich *Messenger* siehst du alle zum Kontakt gehörigen Nachrichten. Du kannst Nachrichten <<#nachricht-fluestern, flüstern>>, sodass sie nur intern sichtbar sind und _nicht_ für deine Kund:innen. Du kannst Nachrichten <<#nachricht-senden, senden>> und du kannst <<nachricht-minuten-erfassen, Minuten für die Nachricht erfassen>> und diese Minuten als Freiminuten oder bezahlte Minuten speichern. 
 
-Mit einem Klick auf die bereits erstellte Nachricht öffnet sich die Konversation im Messenger. Dort kannst du weitere Einstellungen vornehmen. Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
+Mit einem Klick auf die bereits erstellte Nachricht wird die Konversation im Messenger geöffnet. Dort kannst du weitere Einstellungen vornehmen. Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger-testphase.adoc#[Messenger (Testphase)].
 
 [#nachricht-fluestern]
 ==== Nachricht flüstern
@@ -1054,10 +1054,13 @@ Gehe wie im Folgenden beschrieben vor, um eine Nachricht zu flüstern.
 [.instruction]
 Nachricht flüstern:
 
-. Öffne den Auftrag.
+. Öffne das Menü *CRM » Kontakte*.
+. Suche den Kontakt, den du bearbeiten möchtest, anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+→ Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+. Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
 . Klicke auf der linken Seite auf *Messenger*.
 . Klicke auf *Neue Nachricht* (material:add[]). +
-→ Der Messenger öffnet sich.
+→ Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
 *_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
@@ -1075,10 +1078,13 @@ Gehe wie im Folgenden beschrieben vor, um eine Nachricht zu senden.
 [.instruction]
 Nachricht senden:
 
-. Öffne den Auftrag.
+. Öffne das Menü *CRM » Kontakte*.
+. Suche den Kontakt, den du bearbeiten möchtest, anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+→ Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+. Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
 . Klicke auf der linken Seite auf *Messenger*.
 . Klicke auf *Neue Nachricht* (material:add[]). +
-→ Der Messenger öffnet sich.
+→ Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
 *_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
@@ -1100,10 +1106,13 @@ Das Erfassen von Minuten ist nur bei geflüsterten Nachrichten möglich.
 [.instruction]
 Minuten für die Nachricht erfassen:
 
-. Öffne den Auftrag.
+. Öffne das Menü *CRM » Kontakte*.
+. Suche den Kontakt, den du bearbeiten möchtest, anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
+→ Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
+. Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
 . Klicke auf der linken Seite auf *Messenger*.
 . Klicke auf *Neue Nachricht* (material:add[]). +
-→ Der Messenger öffnet sich.
+→ Der Messenger wird geöffnet.
 . Wähle einen oder mehrere Empfänger:innen. +
 *_Hinweis:_* Die ID des Auftrags ist bereits als Empfänger vorausgefüllt. Somit wird die E-Mail an die in der Rechnungsadresse gespeicherte E-Mail-Adresse gesendet.
 . Gib bei Bedarf weitere Empfänger:innen ein.
@@ -1111,10 +1120,10 @@ Minuten für die Nachricht erfassen:
 . Gib den Text ins Textfeld ein. +
 → Mit einem Doppelklick auf das Wort stehen dir Formatierungsmöglichkeiten für deine Nachricht zur Verfügung.
 . Füge optional mit einem Klick auf material:attach_file[] *Anhänge hinzufügen* eine Datei an.
-. Klicke auf material:more_vert[] und aktiviere (material:toggle_on[role=skyBlue]) dann die Option *Minuten erfassen*.
+. Klicke auf material:more_vert[] und aktiviere (material:toggle_on[role=skyBlue]) dann die Option *Minuten erfassen*. +
 *_Hinweis:_* Die Schaltfläche ändert sich in material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*. 
 . Klicke auf material:visibility_off[role=skyBlue] *MINUTEN ERFASSEN*, um die Minuten für die Nachricht zu erfassen. +
-→ Das Fenster *Minuten erfassen* öffnet sich.
+→ Das Fenster *Minuten erfassen* wird geöffnet.
 . Passe ggf. die Minuten an.
 . Wähle (material:radio_button_checked[role=skyBlue]), ob es sich um *Freiminuten* oder *Bezahlte Minuten* handelt.
 . Weise der Nachricht ggf. Tags zu. 
@@ -1394,7 +1403,7 @@ Klicke in der Seitennavigation ganz unten links auf die ID des Kontakts (materia
 
 Wenn du Änderungen am Kontaktdatensatz vornimmst, erscheint ein Sternchen in der linken Navigationsleiste hinter dem Namen des Kontakts und der Kontakt-ID. Das Sternchen weist auf ungespeicherte Änderungen hin. 
 
-Wenn du nun versuchst, einen Kontaktdatensatz mit ungespeicherten Änderungen zu schließen, öffnet sich ein Fenster, das dich auf die ungespeicherten Änderungen hinweist. Du entscheidest, wie du weiter vorgehen möchtest.
+Wenn du nun versuchst, einen Kontaktdatensatz mit ungespeicherten Änderungen zu schließen, wird ein Fenster geöffnet, das dich auf die ungespeicherten Änderungen hinweist. Du entscheidest, wie du weiter vorgehen möchtest.
 
 Das Sternchen verschwindet, wenn du deine Änderungen speicherst oder wenn du die Einstellungen auf ihre ursprünglichen Werte zurücksetzt.
 
@@ -1564,7 +1573,7 @@ Adressetikett für mehrere Kontakte herunterladen:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Wähle (material:check_box[role=skyBlue]) die Kontakte, für die du ein Adressetikett herunterladen möchtest. 
 . Klicke in der Symbolleiste oben auf *Adressetikett herunterladen* (material:print[]). +
-→ Das Fenster *Adressetikett herunterladen* öffnet sich.
+→ Das Fenster *Adressetikett herunterladen* wird geöffnet.
 . Wähle das Adressetikett aus der Dropdown-Liste.
 . Klicke auf *Ausführen*. +
 → Das Adressetikett der gewählten Kontakte wird heruntergeladen. +
@@ -1585,7 +1594,7 @@ E-Mail-Vorlage an mehrere Kontakte senden:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Wähle (material:check_box[role=skyBlue]) die Kontakte, an die du eine E-Mail-Vorlage senden möchtest. 
 . Klicke in der Symbolleiste oben auf *E-Mail-Vorlage senden* (material:forward_to_inbox[]). +
-→ Das Fenster *E-Mail-Vorlage senden* öffnet sich.
+→ Das Fenster *E-Mail-Vorlage senden* wird geöffnet.
 . Wähle die E-Mail-Vorlage aus der Dropdown-Liste.
 . Klicke auf *Ausführen*. +
 → Die E-Mail-Vorlage wird an die gewählten Kontakte gesendet.
@@ -1605,7 +1614,7 @@ Mehrere E-Mail-Adressen zu Newsletter-Ordner hinzufügen:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Wähle (material:check_box[role=skyBlue]) die Kontakte, deren E-Mail-Adressen du zu einem bestimmten Newsletter-Ordner hinzufügen möchtest. 
 . Klicke in der Symbolleiste auf *Zu Newsletter-Ordner hinzufügen* (material:post_add[]). +
-→ Das Fenster *Zu Newsletter-Ordner hinzufügen* öffnet sich.
+→ Das Fenster *Zu Newsletter-Ordner hinzufügen* wird geöffnet.
 . Wähle den Newsletter-Ordner aus der Dropdown-Liste.
 . Klicke auf *Ausführen*. +
 → Die E-Mail-Adressen der gewählten Kontakte werden zu dem Newsletter-Ordner hinzugefügt.
@@ -1632,7 +1641,7 @@ Zahlungsziel für mehrere Kontakte speichern:
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Wähle (material:check_box[role=skyBlue]) die Kontakte, für die du ein bestimmtes Zahlungsziel speichern möchtest. 
 . Klicke in der Symbolleiste auf *Zahlungsziel speichern* (material:perm_contact_calendar[]). +
-→ Das Fenster *Gruppenfunktion* öffnet sich.
+→ Das Fenster *Gruppenfunktion* wird geöffnet.
 . Gib das Zahlungsziel in Tagen ein. +
 *_Wichtig:_* Wenn du hier keinen Wert eingibst und die Gruppenfunktion ausführst, wird für die gewählten Kontakte der bisher gespeicherte Wert gelöscht.
 . Klicke auf *Ausführen*. +
