--- a/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-manual-download.adoc
@@ -2,6 +2,7 @@
 
 Du hast mindestens ein Datenfeld für den Export hinzugefügt? Dann kannst du die Katalogdaten manuell exportieren. In welchem Format die Daten exportiert werden, legst du in den xref:daten:standardformate-exportieren.adoc#format-settings[Formateinstellungen des Katalogs] fest. Zurzeit kannst du Daten in den Formaten CSV, TXT, JSON und XML herunterladen.
 
+//tag::single-export[]
 Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 
 [cols="1,3a"]
@@ -12,7 +13,6 @@ Du hast zwei Möglichkeiten, die Katalogdaten manuell zu exportieren:
 | Live-Download
 | Die Datei wird automatisch auf deinen Rechner heruntergeladen. Du kannst den Fortschritt des Exports in Echtzeit verfolgen. +
 *_Aber:_* Das plentymarkets Tab *Datenexport* darf nicht geschlossen oder neu geladen werden, während der Export läuft. Wenn du es doch tust, wird der Export gestoppt.
-
 |===
 
 [tabs]
@@ -81,3 +81,4 @@ Du willst den Live-Download anhalten? Kein Problem:
 //end::live-download[]
 --
 ====
+//end::single-export[]
