--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -302,7 +302,7 @@ Exporting catalogue data to a file once:
 → The export will start and it runs in the background.
 You can continue working during the export process. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+→ Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
 . In the notification centre, click on material:link[] *Download*. +
 *_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
 . Save the file on your computer.
