--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -34,7 +34,7 @@ Starting an asynchronous download:
 *_Or:_* Even quicker: Start the download from the *Additional actions* (material:more_vert[]) in the catalogue overview. +
 → The export starts. +
 *_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
+→ Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
 . In the notification centre, click on material:link[] *Download*. +
 *_Tip:_* The notification is no longer shown? Use the URL shown in the *Download settings* to access the file at any time.
 . Save the file on your computer.
