--- a/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/marktplatz-formate-exportieren.adoc
@@ -274,43 +274,18 @@ include::maerkte:partial$catalogue-mapping.adoc[tag=formula-config]
 
 Kataloge mit Marktplatz-Formaten werden automatisch zu Marktplätzen exportiert, wenn du alle erforderlichen Einstellungen vorgenommen hast. Du kannst also die Einstellungen für *Formateinstellungen*, *Exporteinstellungen* und *Download-Einstellungen* in den Katalogeinstellungen ignorieren.
 
-Optional kannst du aber eine Datei exportieren, in der die Daten festgehalten werden, die auch an den Marktplatz exportiert werden.
+Optional kannst du aber eine Datei exportieren, in der die Daten enthalten sind, die auch an den Marktplatz exportiert werden.
 
-[tabs]
-====
-Einmaliger Katalogexport in Datei::
-+
---
+[#XjKI8jqJKa]
+=== Einmaliger Katalogexport in Datei
 
 Mit dieser Anleitung exportierst du die Katalogdaten einmalig in eine Datei. Die Katalogdaten werden dabei *_nicht_* an den Marktplatz exportiert.
 
-NOTE: Wenn du auf *Daten herunterladen* klickst, wird der Exportvorgang gestartet. Es wird aber _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Erst wenn der Exportvorgang abgeschlossen ist, kannst du die Exportdatei in den Notifications herunterladen.
+include::partial$catalogue-manual-download.adoc[tag=single-export]
 
-[.instruction]
-Katalogdaten einmalig in Datei exportieren:
 
-. Öffne das Menü *Daten » Kataloge*. +
-→ Die Katalog-Übersicht wird geöffnet.
-. Klicke auf den Katalog. +
-→ Der Katalog wird geöffnet.
-. Klicke links auf das Tab *Einstellungen* (icon:cog[]). +
-→ Die Einstellungsmöglichkeiten werden angezeigt.
-. Prüfe die Einstellungen und passe sie bei Bedarf an. +
-*_Tipp:_* Stelle sicher, dass in den *Download-Einstellungen* die Option *Benachrichtigungen erhalten* aktiviert ist.
-. Speichere (terra:save[]) die Einstellungen. +
-. Klicke in der Symbolleiste oben auf material:file_download[]. +
-→ Der Export wird gestartet und läuft im Hintergrund.
-Du kannst während des Exportvorgangs weiter arbeiten. +
-*_Wichtig:_* Der Export läuft im Hintergrund. Es wird _kein_ Fenster angezeigt, über das du die Datei sofort herunterladen kannst. Auch der Export kleiner Datenmengen dauert ca. 30 Minuten. +
-→ Wenn der Export abgeschlossen ist, wirst in den Notifications (material:notifications_none[]) angezeigt, dass die Exportdatei heruntergeladen werden kann.
-. Klicke im Notification Center auf material:link[] *Herunterladen*. +
-*_Tipp:_* Die Notification wird nicht mehr angezeigt? Die Datei kann immer über die URL in den *Download-Einstellungen* abgerufen werden.
-. Speichere die Datei auf deinem Rechner.
---
- 
-Regelmäßiger Katalogexport in Datei::
-+
---
+[#X9NucM8q50]
+=== Regelmäßiger Katalogexport in Datei
 
 Mit dieser Anleitung speicherst du die Variantendaten des Katalogs regelmäßig an einem Speicherort, den du selbst festlegst. Auch was "regelmäßig" bedeutet, legst du selbst fest. Die Katalogdaten werden dabei *_nicht_* an den Marktplatz exportiert.
 
@@ -327,8 +302,7 @@ Regelmäßigen Katalogexport in Datei einrichten:
 . Speichere (terra:save[]) die Einstellungen. +
 → Die Katalogdaten werden im festgelegten Intervall als Datei exportiert. +
 → Die Datei wird am festgelegten Speicherort gespeichert.
---
-====
+
 
 [[table-file-export]]
 .Einstellungen für optionalen Dateiexport
