--- a/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
+++ b/docs/en-gb/modules/data/pages/export-marketplace-formats.adoc
@@ -276,41 +276,16 @@ Catalogues with marketplace formats are automatically exported to markets if all
 
 However, you can also export a file that contains the data that is also exported to the market.
 
-[tabs]
-====
-One-time file export::
-+
---
+[#XjKI8jqJKa]
+=== One-time catalogue export to a file
 
 Use these instructions to create a one-time export of the catalogue data. The catalogue data is *_not_* exported to the market.
 
-NOTE: The export process is started when you click on *Download data*. However, note that there will be _no_ window for downloading the file straight away. When the export is completed, you can download the export file from the Notifications.
+include::partial$catalogue-manual-download.adoc[tag=single-export]
 
-[.instruction]
-Exporting catalogue data to a file once:
 
-. Go to *Data » Catalogues*. +
-→ The catalogue overview opens.
-. Click on the catalogue. +
-→ The catalogue opens.
-. Click on the *Settings* tab (icon:cog[]) on the left. +
-→ The different settings options are shown.
-. Check the settings and change them as needed. +
-*_Tip:_* Make sure that the option *Receive notifications* is active in the *Download settings*.
-. Save (terra:save[]) the settings. +
-. In the toolbar at the top, click on material:file_download[]. +
-→ The export will start and it runs in the background.
-You can continue working during the export process. +
-*_Important:_* The export runs in the background. Note that there will be _no_ window for downloading the file straight away. Even exporting small amounts of data will take around 30 minutes. +
-→ Once the export is finished, you will be notified (material:notifications_none[]) that the export file can be downloaded.
-. In the notification centre, click on material:link[] *Download*. +
-*_Tip:_* The notification is no longer shown? You can always access the file using the URL shown in the *Download settings*.
-. Save the file on your computer.
---
- 
-Regular file export::
-+
---
+[#X9NucM8q50]
+=== Regular catalogue export to a file
 
 Use these instructions to save the variation data of the catalogue regularly to a specified storage location. It is also up to you to decide what “regularly” means. The catalogue data is *_not_* exported to the market.
 
@@ -327,8 +302,7 @@ Setting up regular file exports:
 . Save (terra:save[]) the settings. +
 → The catalogue data is exported to a file in the specified intervals. +
 → The file is saved at the specified storage location.
---
-====
+
 
 [[table-file-export]]
 .Settings for optional file export
