--- a/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-manual-download.adoc
@@ -2,6 +2,7 @@
 
 Have you added at least one data field to the export? Then download the catalogue data manually. The format of the download file depends on the xref:data:export-standard-formats.adoc#format-settings[format settings of the catalogue]. You can export data in CSV, TXT, JSON and XML files.
 
+//tag::single-export[]
 There are two ways to manually export the catalogue data:
 
 [cols="1,3a"]
@@ -12,7 +13,6 @@ There are two ways to manually export the catalogue data:
 | Live download
 | The file is downloaded to your computer automatically. You can follow the export progress in real time. +
 *_However:_* Do not close or reload the plentymarkets tab *Data export* while the export is in progress. If you do so, the export will be cancelled.
-
 |===
 
 [tabs]
@@ -81,3 +81,4 @@ Do you want to stop a live download? No problem:
 //end::live-download[]
 --
 ====
+//end::single-export[]
