--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -789,7 +789,7 @@ Automatischen Katalogexport aktivieren:
 → Die Daten werden zu dem Speicherort und in dem Intervall exportiert, die du in den Katalogeinstellungen festgelegt hast.
 
 [#manual-export]
-=== Manuellen Export in Katalog starten
+=== Manuellen Export starten
 
 include::partial$catalogue-manual-download.adoc[]
 
