--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -106,24 +106,7 @@ This chapter describes the settings that need to be configured in order to excha
 [#1900]
 === Importing Amazon orders
 
-Go to *Setup » Markets » Amazon » Data exchange » Order import* to set up the import of Amazon orders. Orders can be imported automatically via the XML interface or they can be imported manually with a TXT file. Both possibilities are described below.
-
-[#2000]
-==== Automatically importing orders
-
-Proceed as follows to set up the automatic order import.
-
-[.instruction]
-Setting up the automatic order import:
-
-. Go to *Setup » Markets » Amazon » Data exchange » Order import*.
-. Select the option *Retrieve XML interface* from the *Process for order import* drop-down list. +
-→ A second drop-down list opens.
-. Select the account from the *Amazon account* drop-down list.
-. Click on *Preview* (icon:search[role="blue"]) to show a preview of the import.
-
-[#2100]
-==== Manually importing orders
+Go to *Setup » Markets » Amazon » Data exchange » Order import* to set up the import of Amazon orders. In this menu, orders can be imported manually with a CSV file.
 
 Proceed as follows to set up the manual import of Amazon orders.
 
