Changed intro text

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -101,7 +101,7 @@ Amazon-spezifische Einstellungen in Versandprofil vornehmen:
 [#1500]
 == Datenaustausch aktivieren
 
-In diesem Bereich werden die Einstellungen zum Datenaustausch zwischen deinem plentymarkets System und dem Marktplatz Amazon beschrieben. Du importierst Amazon-Aufträge automatisch über die XML-Schnittstelle oder manuell über eine CSV-Datei. Du erfährst zudem, wie du Versandbestätigungen an Amazon sendest, FBA-Bestände synchronisierst und Auftragsberichte von Amazon zurücksetzt.
+In diesem Bereich werden die Einstellungen zum Datenaustausch zwischen deinem plentymarkets System und dem Marktplatz Amazon beschrieben. Du kannst Amazon-Aufträge manuell über eine CSV-Datei importieren. Du erfährst zudem, wie du Versandbestätigungen an Amazon sendest, FBA-Bestände synchronisierst und Auftragsberichte von Amazon zurücksetzt.
 
 [#1900]
 === Amazon-Aufträge importieren
