--- a/docs/en-gb/modules/markets/pages/amazon-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-setup.adoc
@@ -101,7 +101,7 @@ Carrying out Amazon specific shipping profile settings:
 [#1500]
 == Activating the data exchange
 
-This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You will learn how to automatically import Amazon orders via the XML interface and how to manually import them with a CSV file. Third, you will learn how to send shipping confirmations to Amazon, how to synchronise FBA stock and how to reset order reports from Amazon.
+This chapter describes the settings that need to be configured in order to exchange data between your plentymarkets system and Amazon. You will learn how to manually import Amazon orders with a CSV file, how to send shipping confirmations to Amazon, how to synchronise FBA stock, and how to reset order reports from Amazon.
 
 [#1900]
 === Importing Amazon orders
