Deleted outdated order import option (#1171)
* Deleted outdated order import option

* Update amazon-setup.adoc

* Changed intro text

--- a/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-einrichten.adoc
@@ -101,29 +101,12 @@ Amazon-spezifische Einstellungen in Versandprofil vornehmen:
 [#1500]
 == Datenaustausch aktivieren
 
-In diesem Bereich werden die Einstellungen zum Datenaustausch zwischen deinem plentymarkets System und dem Marktplatz Amazon beschrieben. Du importierst Amazon-Aufträge automatisch über die XML-Schnittstelle oder manuell über eine CSV-Datei. Du erfährst zudem, wie du Versandbestätigungen an Amazon sendest, FBA-Bestände synchronisierst und Auftragsberichte von Amazon zurücksetzt.
+In diesem Bereich werden die Einstellungen zum Datenaustausch zwischen deinem plentymarkets System und dem Marktplatz Amazon beschrieben. Du kannst Amazon-Aufträge manuell über eine CSV-Datei importieren. Du erfährst zudem, wie du Versandbestätigungen an Amazon sendest, FBA-Bestände synchronisierst und Auftragsberichte von Amazon zurücksetzt.
 
 [#1900]
 === Amazon-Aufträge importieren
 
-Im Menü *Einrichtung » Märkte » Amazon » Datenaustausch » Auftragsimport* richtest du den Import von Amazon-Aufträgen ein. Aufträge können sowohl automatisch über die XML-Schnittstelle als auch manuell über eine TXT-Datei importiert werden. Beide Varianten werden folgend beschrieben.
-
-[#2000]
-==== Aufträge automatisch importieren
-
-Gehe wie im Folgenden beschrieben vor, um den automatischen Auftragsimport einzurichten.
-
-[.instruction]
-Automatischen Auftragsimport einrichten:
-
-. Öffne das Menü *Einrichtung » Märkte » Amazon » Datenaustausch » Auftragsimport*.
-. Wähle aus der Dropdown-Liste *Verfahren für Auftragsimport* die Option *XML-Schnittstelle abrufen*. +
-→ Eine zweite Dropdown-Liste wird angezeigt.
-. Wähle aus der Dropdown-Liste *Amazon-Account* das Konto.
-. Klicke auf *Vorschau* (icon:search[role="blue"]), um eine Vorschau des Imports anzuzeigen.
-
-[#2100]
-==== Aufträge manuell importieren
+Im Menü *Einrichtung » Märkte » Amazon » Datenaustausch » Auftragsimport* richtest du den Import von Amazon-Aufträgen ein. Aufträge können hier manuell über eine CSV-Datei importiert werden.
 
 Gehe wie im Folgenden beschrieben vor, um den manuellen Import von Amazon-Aufträgen einzurichten.
 
