add new messenger to quick search page

--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -179,9 +179,9 @@ Mit einem Klick auf material:add[] *Neues Angebot* rechts neben *ANGEBOTE* wird 
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind diese Felder ausgegraut.
 
 | *MESSENGER*
-|Öffnet weiter unten den Bereich *Messenger*. +
-Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* öffnet sich weiter unten das Bearbeitungsfenster zum Erstellen einer neuen Nachricht. Die Stoppuhr oben rechts im Messenger-Bereich startet automatisch, sobald die neue Nachricht geöffnet wird. Klicke neben dem Feld *Minuten* auf *Kostenpflichtig* (material:toggle_off[] terra:pay_cash[]), um die Zeit abzurechnen. +
-*_Hinweis:_* Weitere Informationen findest du auf der Handbuchseite xref:crm:messenger.adoc#[Messenger]. +
+|Öffnet den *Messenger*. +
+Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* wird der Messenger zum Erstellen einer neuen Nachricht in einem neuen Fenster geöffnet. Die Kontakt-ID ist bereits im Empfängerfeld vorausgefüllt. +
+Du kannst die Nachricht flüstern, die Nachricht xref:crm:messenger-testphase.adoc#nachricht-erstellen[senden] oder xref:crm:messenger-testphase.adoc#minuten-erfassen[Minuten für die Nachricht erfassen] und diese dann als Freiminuten oder bezahlte Minuten definieren. +
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind die Felder *MESSENGER* und *Neue Nachricht* ausgegraut.
 
 | *TICKETS*
