--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -181,10 +181,16 @@ Click on material:add[] *New offer* right next to *OFFERS* to create a new offer
 *_Note:_* If the data record is a guest order, these fields are not available.
 
 | *MESSENGER*
-|Opens the *Messenger* area further down in this view. +
-Click on material:add[] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view. The stop watch in the top right corner of the Messenger area starts automatically once you open the message. Next to *Minutes* field, click on *Billable* (material:toggle_off[] terra:pay_cash[]) to bill the minutes. +
-*_Note:_* For further information, refer to the xref:crm:messenger.adoc#[Messenger] page.+
+|Opens the *Messenger*. +
+Click on material:add[] *New message* right next to *MESSENGER* to open the messenger for creating a new message in a new window. The contact ID is already preselected in the recipient field. +
+You can whisper the message, xref:crm:messenger-testphase.adoc#create-message[send] the message or xref:crm:messenger-testphase.adoc#capture-minutes[capture minutes for the message] and determine whether they are free minutes or paid minutes. +
 *_Note:_* If the data record is a guest order, the fields *MESSENGER* and *New message* are not available.
+
+| *MESSENGER*
+|Öffnet den *Messenger*. +
+Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* wird der Messenger zum Erstellen einer neuen Nachricht in einem neuen Fenster geöffnet. Die Kontakt-ID ist bereits im Empfängerfeld vorausgefüllt. +
+Du kannst die Nachricht flüstern, die Nachricht xref:crm:messenger-testphase.adoc#nachricht-erstellen[senden] oder xref:crm:messenger-testphase.adoc#minuten-erfassen[Minuten für die Nachricht erfassen] und diese dann als Freiminuten oder bezahlte Minuten definieren. +
+*_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind die Felder *MESSENGER* und *Neue Nachricht* ausgegraut.
 
 | *TICKETS*
 |Opens the *CRM » Ticket system* menu. The ID of the contact is automatically selected as filter. +
