default client for elastic export

--- a/docs/de-de/modules/daten/pages/elastic.adoc
+++ b/docs/de-de/modules/daten/pages/elastic.adoc
@@ -24,6 +24,7 @@ Produkte an Marktplätze übertragen::
 . Lade die nötigen Plugins herunter:
 .. Elastischer Export
 .. Sogenannte Datenformat-Plugins für deine gewünschten Marktplätze
+. Stelle diese Plugins in deinem Standard-Mandanten bereit.
 . Richte den elastischen Export ein.
 Wähle dabei das Datenformat für den entsprechenden Marktplatz aus.
 . Übertrage die CSV-Datei an den Marktplatz.
@@ -36,12 +37,19 @@ Daten exportieren, überarbeiten, neu importieren::
 . Lade die nötigen Plugins herunter:
 .. Elastischer Export
 .. FormatDesigner
+. Stelle diese Plugins in deinem Standard-Mandanten bereit.
 . Erstelle sogenannte Datenformate mit Hilfe des FormatDesigners.
 . Richte den elastischen Export ein.
 Wähle dabei das soeben erstellte Datenformat aus.
 . Exportiere die CSV-Datei, überarbeite diese und importiere sie wieder in plentymarkets.
 
 --
+====
+
+[TIP]
+.Plugin-Set mit Standard-Mandantenverknüpfung
+====
+Installiere den elastischen Export und die Plugins für weitere Marktplätze in einem Plugin-Set mit Standard-Mandantenverknüpfung.
 ====
 
 [discrete]
