--- a/docs/en-gb/modules/data/pages/setup-use.adoc
+++ b/docs/en-gb/modules/data/pages/setup-use.adoc
@@ -24,7 +24,8 @@ Transmit products to marketplaces::
 
 . Download the necessary plugins:
 .. Elastic Export
-.. So-called data format plugins for your chosen marketplaces.
+.. So-called data format plugins for your chosen marketplaces
+. Provision these plugins in the plugin set of your default client.
 . Configure the elastic export.
 While doing so, choose the data format for the corresponding marketplace.
 . Transmit the CSV file to the marketplace.
@@ -37,6 +38,7 @@ Export, modify and re-import data::
 . Download the necessary plugins:
 .. Elastic Export
 .. FormatDesigner
+. Provision these plugins in the plugin set of your default client.
 . Create so-called data formats with help from the FormatDesigner.
 . Configure the elastic export.
 While doing so, choose the data format that you just created.
