--- a/docs/en-gb/modules/data/pages/elastic.adoc
+++ b/docs/en-gb/modules/data/pages/elastic.adoc
@@ -23,7 +23,8 @@ Transmit products to marketplaces::
 
 . Download the necessary plugins:
 .. Elastic Export
-.. So-called data format plugins for your chosen marketplaces.
+.. So-called data format plugins for your chosen marketplaces
+. Provision these plugins in the plugin set of your default client.
 . Configure the elastic export.
 While doing so, choose the data format for the corresponding marketplace.
 . Transmit the CSV file to the marketplace.
@@ -36,6 +37,7 @@ Export, modify and re-import data::
 . Download the necessary plugins:
 .. Elastic Export
 .. FormatDesigner
+. Provision these plugins in the plugin set of your default client.
 . Create so-called data formats with help from the FormatDesigner.
 . Configure the elastic export.
 While doing so, choose the data format that you just created.
@@ -44,6 +46,12 @@ While doing so, choose the data format that you just created.
 --
 ====
 '''
+
+[TIP]
+.Plugin set linked to default client
+====
+Install the elastic export and the plugins for additional markets in a plugin set that is linked to the default client.
+====
 
 [discrete]
 === Advantages and disadvantages of the elastic export
