add link to whispered message on quick search page

--- a/docs/de-de/modules/crm/pages/schnellsuche.adoc
+++ b/docs/de-de/modules/crm/pages/schnellsuche.adoc
@@ -181,7 +181,7 @@ Mit einem Klick auf material:add[] *Neues Angebot* rechts neben *ANGEBOTE* wird 
 | *MESSENGER*
 |Öffnet den *Messenger*. +
 Mit einem Klick auf material:add[] *Neue Nachricht* rechts neben *MESSENGER* wird der Messenger zum Erstellen einer neuen Nachricht in einem neuen Fenster geöffnet. Die Kontakt-ID ist bereits im Empfängerfeld vorausgefüllt. +
-Du kannst die Nachricht flüstern, die Nachricht xref:crm:messenger-testphase.adoc#nachricht-erstellen[senden] oder xref:crm:messenger-testphase.adoc#minuten-erfassen[Minuten für die Nachricht erfassen] und diese dann als Freiminuten oder bezahlte Minuten definieren. +
+Du kannst die Nachricht xref:crm:messenger-testphase.adoc#intable-whisper-mode[flüstern], die Nachricht xref:crm:messenger-testphase.adoc#nachricht-erstellen[senden] oder xref:crm:messenger-testphase.adoc#minuten-erfassen[Minuten für die Nachricht erfassen] und diese dann als Freiminuten oder bezahlte Minuten definieren. +
 *_Hinweis:_* Wenn es sich bei dem Datensatz um eine Gastbestellung handelt, sind die Felder *MESSENGER* und *Neue Nachricht* ausgegraut.
 
 | *TICKETS*
