--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -183,7 +183,7 @@ Click on material:add[] *New offer* right next to *OFFERS* to create a new offer
 | *MESSENGER*
 |Opens the *Messenger*. +
 Click on material:add[] *New message* right next to *MESSENGER* to open the messenger for creating a new message in a new window. The contact ID is already preselected in the recipient field. +
-You can whisper the message, xref:crm:messenger-testphase.adoc#create-message[send] the message or xref:crm:messenger-testphase.adoc#capture-minutes[capture minutes for the message] and determine whether they are free minutes or paid minutes. +
+You can xref:crm:messenger-testphase.adoc#intable-whisper-mode[whisper] the message, xref:crm:messenger-testphase.adoc#create-message[send] the message or xref:crm:messenger-testphase.adoc#capture-minutes[capture minutes for the message] and determine whether they are free minutes or paid minutes. +
 *_Note:_* If the data record is a guest order, the fields *MESSENGER* and *New message* are not available.
 
 | *MESSENGER*
